Something to show

--- a/package.json
+++ b/package.json
@@ -33,16 +33,14 @@
     "connect-history-api-fallback": "^1.6.0",
     "connect-timeout": "^1.9.0",
     "css-element-queries": "^1.2.1",
-    "echarts": "^4.2.0-rc.2",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
     "ionicons": "^2.0.1",
     "jquery": "^3.3.1",
-    "jquery.flot": "^0.8.3",
-    "flot-spline": "0.0.1",
     "lodash": "^4.17.11",
     "mithril": "^1.1.6",
     "morgan": "^1.9.1",
+    "chart.js": "^2.7.3",
     "prerender-node": "^3.2.0",
     "rickshaw": "^1.6.6",
     "winston": "^3.2.1",
