--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
-    "bootstrap-tagsinput": "^0.7.1",
     "brunch": "^2.10.17",
+    "chart.js": "^2.7.3",
     "coffeescript": "^2.4.1",
     "compression": "^1.7.2",
     "connect-history-api-fallback": "^1.6.0",
@@ -40,7 +40,6 @@
     "lodash": "^4.17.11",
     "mithril": "^1.1.6",
     "morgan": "^1.9.1",
-    "chart.js": "^2.7.3",
     "prerender-node": "^3.2.0",
     "rickshaw": "^1.6.6",
     "winston": "^3.2.1",
@@ -49,15 +48,16 @@
   "devDependencies": {
     "auto-reload-brunch": "^2.0.0",
     "autoprefixer": "^7.1.4",
-    "cachebust-brunch": "git+https://github.com/reubano/cachebust-brunch.git#01c893e49fc",
     "clean-css-brunch": "^2.0.0",
     "coffee-script-brunch": "^3.0.0",
     "coffeelint": "^2.1.0",
     "coffeelint-brunch": "^2.10.0",
     "copycat-brunch": "^1.1.1",
     "json-brunch": "^1.5.4",
+    "popper.js": "^1.15.0",
     "process-env-brunch": "git+https://github.com/mikeedwards/process-env-brunch.git#1d4dab5833e0",
     "sass-brunch": "^2.10.8",
-    "uglify-js-brunch": "^2.0.0"
+    "terser-brunch": "^3.0.0",
+    "cachebust-brunch": "git+https://github.com/reubano/cachebust-brunch.git#01c893e49fc"
   }
 }
